<resources>
    <string name="app_name">My Application</string>
    <string name="label_for_value_a">A:</string>
    <string name="label_for_value_b">B:</string>
    <string name="label_for_value_c">C:</string>
    <string name="label_for_value_adds">plus</string>
    <string name="label_for_value_substracts">minus</string>
    <string name="label_for_value_miltiplies">ymnoz</string>
    <string name="label_for_value_divideos">delen</string>
    <string name="label_for_value_Sin">Sin(A)</string>
    <string name="label_for_value_Cos">Cos(A)</string>
    <string name="label_for_value_Stepen">A^B</string>
</resources>